--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -80,4 +80,15 @@ After cross multiplying and solving for $A(\theta)$
 A(\theta) = log( exp(\theta_x) + exp(\theta_{xy} + \theta_x) + 2 )
 \]
 
+\subsection*{Part B}
+After letting $\theta_{xy} = 1$ we have the following
+\[
+A(\theta) = log( exp(\theta_x) + exp(1 + \theta_x) + 2 )
+\]
+After some factoring
+\[
+A(\theta) = log( exp(\theta_x)(1 + exp(1) ) + 2 )
+\]
+INSERT GRAPH OF THIS
+
 \end{document}
