--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -91,4 +91,14 @@ A(\theta) = log( exp(\theta_x)(1 + exp(1) ) + 2 )
 \]
 INSERT GRAPH OF THIS
 
+\subsection*{Part C}
+This is the partial with respect to $\theta_x$
+\[
+\frac{\partial A}{\partial \theta_x} = \frac{exp(\theta_x) + exp(\theta_x + \theta_{xy})}{exp(\theta_x) + exp(\theta_x + \theta_{xy}) + 2}
+\]
+This is the partial with respect to $\theta_{xy}$
+\[
+\frac{\partial A}{\partial \theta_{xy}} = \frac{exp(\theta_x + \theta_{xy})}{exp(\theta_x) + exp(\theta_x + \theta_{xy}) + 2}
+\]
+
 \end{document}
