--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -100,5 +100,12 @@ This is the partial with respect to $\theta_{xy}$
 \[
 \frac{\partial A}{\partial \theta_{xy}} = \frac{exp(\theta_x + \theta_{xy})}{exp(\theta_x) + exp(\theta_x + \theta_{xy}) + 2}
 \]
-
+Thus we have 
+\[
+\bigtriangledown A(\theta) = [\frac{exp(1)+exp(3)}{exp(1)+exp(3)+2},\frac{exp(3)}{exp(1)+exp(3)+2}]
+\]
+Approximately 
+\[
+\bigtriangledown A(\theta) = [0.91937,0.80978]
+\]
 \end{document}
