--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -58,6 +58,52 @@
 \centerline{CS 274B: Spring \& 2016}
 \centerline{\bf Due: April 15, 2016}
 
+\section*{Problem 1: }
+
+I will assume that each random variable had $d$ states.
+
+\subsection*{Part A}
+
+To satisfy W, we need $d^3$ parameters \\
+To satisfy Z, we need $d^2$ parameters \\
+To satisfy Y, we need $d$ parameters\\
+For probabilities of X, we need $d-1$ parameters\\
+Our total is thus
+\[
+\frac{d^4-1}{d-1} + d - 2
+\]
+
+\subsection*{Part B}
+
+For each random variable, we need $d-1$ parameters. \\
+They are all independent\\
+Thus our total is just $4(d-1)$
+
+\subsection*{Part C}
+
+The variables $Z,W,X$ each need $d$ parameters\\
+The variable $Y$ needs $d-1$ parameters\\
+\\
+Thus our total is $4d-1$
+
+\subsection*{Part D}
+
+To satisfy Z, we need $d^2$ parameters\\
+For X and Y, we need $d-1$ parameters for each one\\
+To satisfy W, we need $d$ parameters\\
+Our total is thus $d^2 + 2d - 1$
+
+\subsection*{Part E}
+
+To satisfy W,Y,Z, we need $d$ parameters\\
+To satisfy Z, we need $d-1$ parameters\\
+Our total is $4d-1$ 
+
+\subsection*{Part F}
+
+To satisfy W,Y,Z, we need $d$ parameters\\
+To satisfy Z, we need $d-1$ parameters\\
+Our total is $4d-1$ 
 
 \section*{Problem 3: }
 
