--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -105,6 +105,25 @@ To satisfy W,Y,Z, we need $d$ parameters\\
 To satisfy Z, we need $d-1$ parameters\\
 Our total is $4d-1$ 
 
+\section*{Problem 2:}
+
+\subsection*{Part A}
+No\\
+Knowing the value of $\textit{projector\_plugged\_in}$ will affect the value of $\textit{power\_in\_wire}$ and subsequent variables in the network, none of which are $\textit{Sam\_reading\_book}$\\
+The value of $\textit{Sam\_reading\_book}$ is conditioned on different variables than $\textit{projector\_plugged\_in}$
+
+\subsection*{Part B}
+
+Yes\\
+Knowing that $\textit{screen\_lit\_up}$ is true means that you know more about whether or not $\textit{power\_in\_building}$ is true. \\
+Belief in $\textit{Sam\_reading\_book}$ is affected by the value of $\textit{power\_in\_building}$
+
+\subsection*{Part C}
+
+\subsection*{Part D}
+
+\subsection*{Part E}
+
 \section*{Problem 3: }
 
 \subsection*{Part A}
