--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -81,12 +81,22 @@ Simplifying, our final total is
 d^4-1
 \]
 Thus this Bayesian network does not simplify the joint distribution
-
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partA.png}
+\caption{Minimal Directed Graphical Model for Part A}
+\end{figure}
+\newpage
 \subsection*{Part B}
 
 For each random variable, we need $d-1$ parameters. \\
 They are all independent\\
 Thus our total is just $4(d-1)$
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partB.png}
+\caption{Minimal Directed Graphical Model for Part B}
+\end{figure}
 
 \subsection*{Part C}
 
@@ -95,6 +105,13 @@ The variables $p(Z|Y)$, $p(W|Y)$, $p(X|Y)$ each need $d(d-1)$ parameters since w
 The factor $p(Y)$ needs $d-1$ parameters\\
 \\
 Thus our total is $(3d+1)(d-1)$
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partC.png}
+\caption{Minimal Directed Graphical Model for Part C}
+\end{figure}
+
+\newpage
 
 \subsection*{Part D}
 
@@ -107,6 +124,13 @@ Our total is thus
 \[
 (d^2+d+2)(d-1) = (d^2+d+1)(d-1) + (d-1) = (d^3-1) + (d-1) = d^3 + d - 2
 \]
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partD.png}
+\caption{Minimal Directed Graphical Model for Part D}
+\end{figure}
+
+\newpage
 
 \subsection*{Part E}
 
@@ -119,11 +143,25 @@ To satisfy $p(W|X)$ we need $d(d-1)$ parameters for same reason as $p(Y|Z)$\\
 \\
 Our total is thus $(3d+1)(d-1)$ parameters
 
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partE.png}
+\caption{Minimal Directed Graphical Model for Part E}
+\end{figure}
+
 \subsection*{Part F}
 
 To satisfy $p(X)$ we need $d-1$ parameters\\
 To satisfy the other three factors, we need $d(d-1)$ parameters for each of them for the same reason as $p(Y|Z)$ in part E\\
 Our total is thus $(3d+1)(d-1)$ parameters
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=3in]{HW1_Prob1_partF.png}
+\caption{Minimal Directed Graphical Model for Part F}
+\end{figure}
+
+\newpage
 
 \section*{Problem 2:}
 
