--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -55,6 +55,7 @@
 \begin{document}
 
 \centerline{\Large Homework 1}
+\centerline{Zachary DeStefano, 15247592}
 \centerline{CS 274B: Spring \& 2016}
 \centerline{\bf Due: April 15, 2016}
 
