--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -252,4 +252,5 @@ Approximately
 \[
 \bigtriangledown A(\theta) = [0.91937,0.80978]
 \]
+This is also the expected value of the distribution if $\theta=[1,2]$
 \end{document}
