--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -192,8 +192,9 @@ This would cause us to update probabilities for $\textit{ray\_says\_screen\_is\_
 \subsection*{Part E}
 
 If we observe just $\textit{power\_in\_projector}$ then the same variables from Part D will have their probabilities changed.\\
+We would also update the probability for $\textit{projector\_switch\_on}$\\
 We would also have to update $\textit{power\_in\_building}$ and $\textit{power\_in\_wire}$\\
-**VERIFY THIS**
+
 
 \newpage
 
