--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -283,4 +283,59 @@ This is the result of the print statement
 
 \subsection*{Part B}
 
+Here is the code for Part B (follows the part A code)
+\begin{lstlisting}
+Tmatrix = np.zeros((len(xvals),len(xvals)))
+for i in range(mSeq):
+    curSeq = x[i]
+    for j in range(1,len(curSeq)):
+        xPrev = curSeq[j-1]
+        xCurrent = curSeq[j]
+        Tmatrix[xPrev,xCurrent] += 1
+Tsum = np.matrix(np.sum(Tmatrix,axis=1))
+Tsum = np.transpose(Tsum)
+TsumTiled = np.matlib.repmat(Tsum,1,8)
+Tmatrix = np.divide(Tmatrix,TsumTiled)
+print 'Transition Matrix (first 5 states) is as follows:'
+print Tmatrix[0:5,0:5]
+
+epsilon = 1e-8
+Tmatrix2 = np.matrix(Tmatrix)
+curX = np.matrix(p0vals)
+for i in range(500):
+    prevX = np.copy(curX)
+    curX = curX*Tmatrix2
+    diffX = np.abs(np.subtract(prevX,curX))
+    if np.sum(diffX)<epsilon:
+        break
+print 
+print 'Stationary Distribution:'
+print np.transpose(np.matrix(curX))
+\end{lstlisting}
+
+This is the output of those print statements
+\begin{lstlisting}
+Transition Matrix (first 5 states) is as follows:
+[[  6.02215434e-01   3.40558643e-02   1.20877341e-01   3.68453980e-02
+    1.02646009e-01]
+ [  4.60651517e-01   2.19411172e-02   4.17552894e-02   2.52994515e-02
+    4.52255681e-02]
+ [  8.53601579e-02   3.56129514e-03   8.14666698e-01   4.89824037e-03
+    5.41783917e-03]
+ [  1.61422755e-01   7.77332840e-03   2.13345896e-02   7.02897331e-01
+    3.12952182e-02]
+ [  5.62093936e-02   5.89229505e-04   7.55919431e-04   3.38806965e-03
+    9.18310307e-01]]
+
+Stationary Distribution:
+[[  1.78394852e-01]
+ [  1.16882378e-02]
+ [  2.24024192e-01]
+ [  3.89020939e-02]
+ [  3.36189664e-01]
+ [  9.78638026e-05]
+ [  2.10385915e-01]
+ [  3.17181525e-04]]
+\end{lstlisting}
+
 \end{document}
