--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -370,4 +370,8 @@ Emission Probability Matrix (first 5 states) is as follows:
  [ 0.11633794  0.01160627  0.04784776  0.08957451  0.0400521 ]]
 \end{lstlisting}
 
+\subsection*{Part D}
+
+We can treat the length as another random variable $Y$ and see which variables influcence it.
+
 \end{document}
