--- a/HW1/HW1solution.tex
+++ b/HW1/HW1solution.tex
@@ -439,108 +439,32 @@ logp for sequence 4:
 
 \subsection*{Part E, Toy Example}
 
-As a toy example, I wrote the following code at the end:
+As a toy example, I made an emission matrix that was close to the identity matrix. For the transition matrix, there is a high probability of transitioning from state 0 to state 1, state 1 to state 2, and state 2 to state 0, with the rest of the probabilities relatively low. I made the observation sequence follow this transition pattern.\\
+\\
+I wrote the following code:
 \begin{lstlisting}
-toyT = np.matrix([[0.2,0.3,0.5],[0.4,0.2,0.4],[0.3,0.6,0.1]])
-toyOmat = np.matrix([[0.8,0.1,0.1],[0.1,0.4,0.5],[0.7,0.2,0.1]])
-toyP0 = np.matrix([0.1,0.2,0.7])
-toyObs = np.array([1, 2, 0, 1, 1, 0, 2])
+toyT = np.matrix([[0.1,0.8,0.1],[0.1,0.1,0.8],[0.8,0.1,0.1]])
+toyOmat = np.matrix([[0.8,0.1,0.1],[0.1,0.8,0.1],[0.1,0.1,0.8]])
+toyP0 = np.matrix([0.33,0.33,0.34])
+toyObs = np.array([1, 2, 0, 1, 2, 0, 1])
 
 [toyLog,toyPmatrix] = markovMarginals(x,toyObs,toyP0,toyT,toyOmat)
 
 print
-print 'Toy Log P:'
-print toyLog
-print
 print 'Toy P Matrix:'
 print toyPmatrix
 \end{lstlisting}
-\newpage
-As a test, I compared the output with the following matlab code I wrote (The matrices are all the same. the observation numbers have been incremented by 1 due to Matlab's indexing)
+
+As expected when I printed, the probabilities of the states that correspond to the observations was quite high:
 \begin{lstlisting}
-toyT = [0.2 0.3 0.5; 0.4 0.2 0.4; 0.3 0.6 0.1];
-toyO = [0.8 0.1 0.1; 0.1 0.4 0.5;0.7 0.2 0.1];
-toyp0 = [0.1; 0.2; 0.7];
-
-toyObs = [2 3 1 2 2 1 3];
-
-L = length(toyObs);
-dx = size(toyT,1);
-
-curOcol = toyO(:,toyObs(1));
-initF = curOcol.*toyp0;
-
-logP = log(sum(initF));
-
-initF = initF./sum(initF);
-
-f = zeros(L,dx);
-r = zeros(L,dx);
-p = zeros(L,dx);
-
-f(1,:)=initF';
-
-for i = 2:L
-   prevF = f(i-1,:);
-   curX = (prevF*toyT)';
-   curObs = toyO(:,toyObs(i));
-   f(i,:)=curObs.*curX;
-   logP = logP + log(sum(f(i,:)));
-   f(i,:)=f(i,:)./sum(f(i,:));
-end
-
-r(L,:) = 1.0;
-p(L,:) = r(L,:).*f(L,:);
-
-for t = L-1:-1:1
-   prevR = r(t+1,:)';
-   curOb = toyO(:,toyObs(t+1));
-   curCol = prevR.*curOb;
-   r(t,:)=toyT*curCol;
-   r(t,:)=r(t,:)./sum(r(t,:));
-   p(t,:)=r(t,:).*f(t,:);
-   p(t,:)=p(t,:)./sum(p(t,:));
-end
-
-logP
-p
-\end{lstlisting}
-
-\newpage
-
-This was the output from Python:
-\begin{lstlisting}
-Toy Log P:
--8.04811001954
-
 Toy P Matrix:
-[[ 0.03221004  0.20708374  0.76070622]
- [ 0.10744128  0.84342748  0.04913124]
- [ 0.50826623  0.0352905   0.45644327]
- [ 0.09720744  0.55392127  0.3488713 ]
- [ 0.17645711  0.64033793  0.18320497]
- [ 0.41602448  0.04223316  0.54174236]
- [ 0.09500635  0.78512388  0.11986976]]
+[[ 0.01744661  0.9645781   0.01797529]
+ [ 0.00468024  0.00462266  0.9906971 ]
+ [ 0.99422749  0.00288939  0.00288312]
+ [ 0.00267809  0.99464313  0.00267878]
+ [ 0.0028817   0.00288162  0.99423668]
+ [ 0.99076621  0.0046169   0.00461689]
+ [ 0.01745585  0.9650883   0.01745585]]
 \end{lstlisting}
-
-This was the Matlab output
-\begin{lstlisting}
-logP =
-
-   -8.0481
-
-
-p =
-
-    0.0322    0.2071    0.7607
-    0.1074    0.8434    0.0491
-    0.5083    0.0353    0.4564
-    0.0972    0.5539    0.3489
-    0.1765    0.6403    0.1832
-    0.4160    0.0422    0.5417
-    0.0950    0.7851    0.1199
-\end{lstlisting}
-
-They match!
 
 \end{document}
