--- a/HW2/HW2Write/HW2solution.tex
+++ b/HW2/HW2Write/HW2solution.tex
@@ -110,12 +110,122 @@ Here are the first 5 rows and columns of mutual information
  [ 0.17521613  0.21222061  0.21486084  0.68239551  0.23489376]
  [ 0.24642811  0.29414659  0.27873285  0.23489376  0.67286449]]
 \end{lstlisting}
+\newpage
+\subsection*{Part C}
 
-%\begin{figure}[h]
-%\centering
-%\includegraphics[width=3in]{HW1_Prob1_partA.png}
-%\caption{Minimal Directed Graphical Model for Part A}
-%\end{figure}
+For the algorithm, I added edges in descending order by weight if they did not make a cycle. To compute this, I first initialized the edge information arrays:
+\begin{lstlisting}
+edges = np.zeros(n*(n-1)/2)
+edgeNodeID = np.zeros((n*(n-1)/2,2))
+edgeInd = 0
+for i in range(n):
+    for j in range(i+1,n):
+        edges[edgeInd] = mutualInfo[i, j]
+        edgeNodeID[edgeInd,:] = [i, j]
+        edgeInd+=1
+
+sortedEdges = np.sort(edges)[::-1]
+sortedEdgeID = np.argsort(edges)[::-1]
+\end{lstlisting}
+
+I made a function \textit{nodesHavePath} that tells whether an edge will form a cycle
+\begin{lstlisting}
+def nodesHavePath(adjMatrix,node0,node1):
+
+    n,m = adjMatrix.shape
+    adjMatrix = adjMatrix + np.transpose(adjMatrix)
+    adjPower = np.copy(adjMatrix)
+    adjTotal = np.copy(adjMatrix)
+    for i in range(n):
+        adjPower = np.dot(adjMatrix, adjPower)
+        adjTotal += adjPower
+
+    return (adjTotal[node0,node1]>0)
+\end{lstlisting}
+
+I then computed the adjacency matrix for the Chow-Liu Tree:
+\begin{lstlisting}
+adjMatrix = np.zeros((n,n))
+for curI in range(len(sortedEdges)):
+    curEdgeID = sortedEdgeID[curI]
+    curNode0 = edgeNodeID[curEdgeID, 0]
+    curNode1 = edgeNodeID[curEdgeID, 1]
+    if not nodesHavePath(adjMatrix,curNode0,curNode1):
+        adjMatrix[curNode0,curNode1]=1
+\end{lstlisting}
+
+\newpage
+
+To print the edges, I made an adjacency list that does not repeat edges. Here is the code that makes the list and prints out the results
+\begin{lstlisting}
+def getAdjList(adjMatrix):
+    mm,xx = adjMatrix.shape
+    visited = np.zeros((mm))
+    adjList = []
+    listVertices = []
+    for i in range(mm):
+        visited[i] = 1
+        adjVertices = np.where(adjMatrix[i,:]>0)
+        verticesAdd = []
+        for j in adjVertices[0]:
+            if visited[j] <= 0:
+                verticesAdd.append(j)
+        if len(verticesAdd) > 0:
+            adjList.append(verticesAdd)
+            listVertices.append(i)
+    return listVertices,adjList
+
+listVertices,adjList = getAdjList(adjMatrix)
+for i in range(len(listVertices)):
+    print listVertices[i],adjList[i]
+\end{lstlisting}
+
+Here is the printed result
+\begin{lstlisting}
+0 [2]
+1 [4]
+2 [16, 17]
+3 [5, 12, 29]
+4 [6]
+5 [6]
+7 [10, 13]
+8 [13]
+9 [10]
+10 [14]
+11 [12, 14]
+13 [15]
+17 [18, 20]
+18 [19]
+20 [27]
+21 [24, 25, 27]
+22 [23, 26, 28]
+27 [29]
+28 [29]
+\end{lstlisting}
+\newpage
+Here is the code I used to produce the graph drawing of the Chow-Liu Tree
+\begin{lstlisting}
+graph2 = nx.Graph()
+graph2.add_nodes_from(range(n))
+for i in range(len(listVertices)):
+		for j in adjList[i]:
+				graph2.add_edge(listVertices[i],j)
+loc2 = np.zeros(loc.shape)
+loc2[:, 0] = loc[:, 1]
+loc2[:, 1] = loc[:, 0]
+nx.draw_networkx(graph2, node_color='c', pos=loc2)
+plt.title('Weather Station Locations with Chow-Liu Tree')
+plt.xlabel('Longitude')
+plt.ylabel('Latitude')
+plt.show()
+\end{lstlisting}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=6in]{chowLiuTreeFigure2.png}
+\caption{Chow-Liu Tree as computed in Part C}
+\end{figure}
+
 \section*{Problem 2:}
 
 \subsection*{Part A}
