more of hw2 write up done

--- a/HW2/HW2Write/HW2solution.tex
+++ b/HW2/HW2Write/HW2solution.tex
@@ -255,12 +255,151 @@ Log Likelihood:
 -11.0986143278
 \end{lstlisting}
 
+\newpage
+
 \section*{Problem 2:}
 
 \subsection*{Part A}
 
+Here are the edges of the loopy model:
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=6in]{loopyModelFigure2.png}
+\caption{Loopy Model Edges}
+\end{figure}
+
+TODO: ADD ANALYSIS
+\newpage
+
+\subsection*{Part B}
+
+Here is the code for the empirical marginal probabilities
 \begin{lstlisting}
+#this find phat for each variable
+posXcount = np.sum(D,axis=0)
+probXj = np.zeros((n,2))
+probXj[:, 1] = np.divide(posXcount,m)
+probXj[:, 0] = 1-probXj[:,1]
+
+#this find phat(x_j,x_k) for each pair of variables
+# next dimension is probability of j, then prob of k
+probXjk = np.zeros((n,n,2,2))
+for i in range(n):
+    for j in range(n):
+        for k in range(m):
+            probXjk[i, j, D[k, i], D[k, j]] += 1
+probXjk = np.divide(probXjk,m)
+
+#find phat(x_j|x_k)
+probXjGivenK = np.zeros((n,n,2,2))
+for i in range(n):
+    for j in range(n):
+        for jval in range(2):
+            for kval in range(2):
+                probXjGivenK[i,j,jval,kval] = probXjk[i,j,jval,kval]/probXj[j,kval]
+
+def getAdjList(adjMatrix):
+    mm,xx = adjMatrix.shape
+    visited = np.zeros((mm))
+    adjList = []
+    listVertices = []
+    for i in range(mm):
+        visited[i] = 1
+        adjVertices = np.where(adjMatrix[i,:]>0)
+        verticesAdd = []
+        for j in adjVertices[0]:
+            if visited[j] <= 0:
+                verticesAdd.append(j)
+        if len(verticesAdd) > 0:
+            adjList.append(verticesAdd)
+            listVertices.append(i)
+    return listVertices,adjList
+
+listVertices,adjList = getAdjList(adjMatrix)
+
 \end{lstlisting}
 
+TODO: PRINT OUT RESULTS
+
+\subsection*{Part C}
+
+TODO: COMMENT THE CODE, DETAIL ITS PARTS MORE, AND INPUT THE RESULTING FIGURE
+
+\begin{lstlisting}
+gmNodes = [gm.Var(i,2) for i in range(n)]
+probNodes = [gm.Var(i,2) for i in range(n)]
+#print gmNodes
+
+#makes the factors given the loopy model graph we have
+gmFactors = []
+probFactors = []
+for jj in range(len(listVertices)):
+    curJind = listVertices[jj]
+    for kk in adjList[jj]:
+        gmFactors.append(gm.Factor([gmNodes[curJind],gmNodes[kk]],1.0))
+        probFactors.append(gm.Factor([probNodes[curJind], probNodes[kk]], 1.0))
+
+#fills the table with the empiricial probabilities we have calculated
+curListInd = 0
+for jj in range(len(listVertices)):
+    curJind = listVertices[jj]
+    for kk in adjList[jj]:
+        #inputFactor = np.matrix(np.ones((3,3))) ; # TEST CODE
+        inputFactor = np.matrix(np.ones((2, 2)))
+        #inputFactor = np.multiply(inputFactor,0.25)
+        gmFactors[curListInd].table = inputFactor
+        probFactors[curListInd].table = probXjk[curJind,kk,:,:]
+        curListInd += 1
+
+
+sumElim = lambda F,Xlist: F.sum(Xlist)   # helper function for eliminate
+
+numIter=6
+logLikeIter = np.zeros(numIter)
+for iterI in range(numIter):
+    print 'Now computing Iteration: ',iterI
+    listInd = 0
+    for jj in range(len(listVertices)):
+        curJind = listVertices[jj]
+        for kk in adjList[jj]:
+            #print jj,kk
+
+            #does variable elimination to get p_ij value
+            currentFactors = copy.deepcopy(gmFactors)
+            curModel = gm.GraphModel(currentFactors)
+            pri = [1.0 for Xi in currentFactors]
+            pri[curJind], pri[kk] = 2.0, 2.0
+            order = gm.eliminationOrder(curModel,orderMethod='minfill',priority=pri)[0]
+            curModel.eliminate(order[:-2], sumElim)  # eliminate all but last two
+            curP = curModel.joint()
+            curLnZ = np.log(curP.sum())
+            #print 'lnZ: ', curLnZ
+            curP /= curP.sum()
+            #print curP.table
+
+            curLog = 0
+            probModel = gm.GraphModel(probFactors)
+            for ptNum in range(m):
+                curLog += probModel.logValue(D[ptNum,:])
+            curLog = curLog/m
+            #print 'logLike: ',curLog/m,'\n'
+
+            #update the factor
+            currentFij = gmFactors[listInd].table
+            probRatio = np.matrix(np.divide(probXjk[curJind,kk,:,:],curP.table))
+            newFij = np.multiply(currentFij,probRatio)
+            gmFactors[listInd].table = newFij
+
+            newFijNorm = newFij/newFij.sum()
+            probFactors[listInd].table = newFijNorm
+
+            listInd+=1
+    logLikeIter[iterI] = curLog
+
+plt.plot(logLikeIter)
+plt.show()
+
+\end{lstlisting}
 
 \end{document}
