--- a/HW2/HW2Write/HW2solution.tex
+++ b/HW2/HW2Write/HW2solution.tex
@@ -262,30 +262,23 @@ Log Likelihood:
 
 \subsection*{Part A}
 
-Here are the edges of the loopy model:
+Here is the loopy model compared with the Chow-Liu Tree Model. The loopy model seems more logical because it resembles a real-world network slightly better. 
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=6in]{loopyModelFigure2.png}
-\caption{Loopy Model Edges}
-\end{figure}
-
-\begin{figure}
-\centering
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.4\linewidth]{loopyModelFigure2.png}
+  \includegraphics[width=3 in]{loopyModelFigure2.png}
   \caption{A subfigure}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
-  \includegraphics[width=.4\linewidth]{chowLiuTreeFigure2.png}
+  \includegraphics[width=3 in]{chowLiuTreeFigure2.png}
   \caption{A subfigure}
 \end{subfigure}
 \caption{A figure with two subfigures}
 \end{figure}
 
-TODO: ADD ANALYSIS
 \newpage
 
 \subsection*{Part B}
