--- a/HW2/HW2Write/HW2solution.tex
+++ b/HW2/HW2Write/HW2solution.tex
@@ -269,14 +269,14 @@ Here is the loopy model compared with the Chow-Liu Tree Model. The loopy model s
 \begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[width=3 in]{loopyModelFigure2.png}
-  \caption{A subfigure}
+  \caption{Loopy Model}
 \end{subfigure}%
 \begin{subfigure}{.5\textwidth}
   \centering
   \includegraphics[width=3 in]{chowLiuTreeFigure2.png}
-  \caption{A subfigure}
+  \caption{Chow-Liu Tree Model}
 \end{subfigure}
-\caption{A figure with two subfigures}
+\caption{Loopy Model and Chow-Liu Tree Model side-by-side}
 \end{figure}
 
 \newpage
